--- a/_config.yml
+++ b/_config.yml
@@ -1,29 +1,29 @@
 # Site
-title: Halve
-description: Stylish, Two-Column Jekyll Theme
-url: https://taylantatli.github.io/Halve
-logo: halve.png                                       # Site logo
+title: DOGWALK
+description: Շների զբոսանքի ծառայութույն Երեւանում
+url: https://tigransimonyan.github.io/dogwalk
+logo: dogwalk.svg
 locale: en_US
 
 # Left Block Images
 background:
-  homepage: images/home.png                           # this image will be shown on homepage's left block
-  post-list: images/unsplash-image-10.jpg             # this image will be shown on post list page
-  default-post: images/unsplash-gallery-image-3.jpg   # this image will be shown when post's front matter doesn't specify any image
+  homepage: images/home.png # this image will be shown on homepage's left block
+  post-list: images/unsplash-image-10.jpg # this image will be shown on post list page
+  default-post: images/unsplash-gallery-image-3.jpg # this image will be shown when post's front matter doesn't specify any image
 
 # Jekyll
-permalink:          /:title/
-markdown:           kramdown
-highlighter:        rouge
+permalink: /:title/
+markdown: kramdown
+highlighter: rouge
 kramdown:
-  auto_ids:         true
-  footnote_nr:      1
-  entity_output:    as_char
-  toc_levels:       1..6
-  enable_coderay:   false
+  auto_ids: true
+  footnote_nr: 1
+  entity_output: as_char
+  toc_levels: 1..6
+  enable_coderay: false
 sass:
-  sass_dir:         assets/_sass
-  style:            compressed
+  sass_dir: assets/_sass
+  style: compressed
 
 # Google Analytics
 #google-analytics: UA-XXXXX-Y
@@ -31,13 +31,13 @@ sass:
 # Social Links
 #email:             email
 #google.plus:        username
-twitter:            username
-#facebook:           username
-github:             username
-stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
+#twitter: username
+facebook: username
+#github: username
+#stackoverflow: 123456/username   from a "http://stackoverflow.com/users/123456/username" link
 #linkedin:          username
 #xing:              username
-#instagram:          username
+instagram: username
 #lastfm:            username
 #tumblr:            username
 #pinterest:         username
@@ -52,7 +52,7 @@ stackoverflow:     123456/username   from a "http://stackoverflow.com/users/1234
 #keybase:           username
 #xmpp:              username@server.com
 #hackernews:        username
-behance:           username
+#behance: username
 
 # Gems
 gems:
@@ -62,4 +62,17 @@ gems:
 
 # Exclude list
 include: [_pages]
-exclude: [README.md, Gemfile, Gemfile.lock, _site, src, vendor, CNAME, LICENSE, Rakefile, .sass-cache, .DS_Store]
+exclude:
+  [
+    README.md,
+    Gemfile,
+    Gemfile.lock,
+    _site,
+    src,
+    vendor,
+    CNAME,
+    LICENSE,
+    Rakefile,
+    .sass-cache,
+    .DS_Store,
+  ]
