--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
 title: DOGWALK
 description: Շների զբոսանքի ծառայութույն Երեւանում
-url: https://tigransimonyan.github.io/dogwalk
+url: https://dogwalk.am
 logo: dogwalk.svg
 locale: en_US
 
@@ -29,14 +29,7 @@ sass:
 #google-analytics: UA-XXXXX-Y
 
 # Social Links
-#email:             email
-#google.plus:        username
-#twitter: username
-facebook: username
-#github: username
-#stackoverflow: 123456/username   from a "http://stackoverflow.com/users/123456/username" link
-#linkedin:          username
-#xing:              username
+facebook: dogwalk.am
 instagram: username
 
 # Gems
