--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: DOGWALK
 description: Շների զբոսանքի ծառայութույն Երեւանում
 url: https://dogwalk.am
-logo: dogwalk.svg
+logo: logo.png
 locale: en_US
 
 # Left Block Images
