--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 title: DOGWALK
-description: Շների հետ զբոսանքի ծառայութույն Երեւանում
+description: Շների զբոսանքի ծառայութույն Երեւանում
 url: https://dogwalk.am
 logo: logo.png
 locale: en_US
